--- a/vis_vanilajs/styles.css
+++ b/vis_vanilajs/styles.css
@@ -5,7 +5,7 @@
     font-family: Roboto, sans-serif;
     height: 1080px;
     width: 1920px;
-    background-color: #eff4f7;
+    /* background-color: #eff4f7; */
   }
   .content-area {
     max-width: 1920px;
@@ -65,10 +65,13 @@
   width: 20px;
   height: 35px;
   margin-left: -10px; /*슬라이더 중앙으로 이동*/
-  background: #043baa;
+  background: #f4f5f6;
+  border : 2px solid black;
+  position: relative;
   cursor: pointer;
   }
-
+  
+  
   table{
     border-collapse: collapse; /*테이블 테두리 없앰*/
     border-spacing: 0; 
@@ -168,6 +171,9 @@
   }
 input[id="check1"] + label{
     display: inline-block;
+    margin-left: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     line-height: 15px;
     width: 13px;
     height: 13px;
@@ -180,6 +186,9 @@ input[id="check1"] + label{
 
   input[id="check2"] + label{
     display: inline-block;
+    margin-left: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     line-height: 15px;
     width: 13px;
     height: 13px;
@@ -195,6 +204,7 @@ input[type="checkbox"]:checked + label::after{
     font-size: 18px;
     width: 15px;
     height: 15px;
+    
     text-align: center;
     position: absolute;
     left: 0;
